20130106
* Worked on initial version

20130105
* Initial version split of from libewf and libcsystem
