@@ -1,3 +1,6 @@
+20130113
+* updated msvscpp files
+
 20130106
 * Worked on initial version
 
